--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.24.1",
     "react-spinners": "^0.14.1",
+    "react-spring": "^9.7.4",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
