--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-loading-skeleton": "^3.4.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.24.1",
     "react-spinners": "^0.14.1",
     "react-spring": "^9.7.4",
