--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
     "@mui/icons-material": "^5.16.1",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.1",
+    "@vidstack/react": "^1.11.30",
+    "artplayer": "^5.1.6",
     "axios": "^1.7.2",
+    "hls.js": "^1.5.13",
     "mdb-react-ui-kit": "^8.0.0",
+    "media-icons": "^1.1.5",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-loading-skeleton": "^3.4.0",
-    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.24.1",
     "react-spinners": "^0.14.1",
-    "react-spring": "^9.7.4",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.5"
   },
