--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.1",
     "@vidstack/react": "^1.11.30",
+    "antd": "^5.20.0",
     "artplayer": "^5.1.6",
     "axios": "^1.7.2",
     "hls.js": "^1.5.13",
