--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.16.1",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "@vidstack/react": "^1.12.8",
     "antd": "^5.20.0",
     "artplayer": "^5.1.6",
@@ -30,8 +31,10 @@
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-loading-skeleton": "^3.4.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.5"
   },
